[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/theme/fonts/big_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/theme/gravity_theme.tres" type="Theme" id=2]
[ext_resource path="res://game/hud/Hud.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/fonts/menu_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://game/hud/StatLineRacer.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/hud/GameOver.gd" type="Script" id=6]
[ext_resource path="res://game/hud/GameTime.gd" type="Script" id=7]
[ext_resource path="res://game/hud/HudGameTimer.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/hud/StartCountdown.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFontData" id=775]
font_path = "res://assets/theme/fonts/Gamer.ttf"

[sub_resource type="DynamicFont" id=776]
size = 120
font_data = SubResource( 775 )

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0, 16.0 ],
"_edit_vertical_guides_": [ 640.0, 0.0, 320.0 ]
}

[node name="StatLineRacer1" parent="." instance=ExtResource( 5 )]
margin_left = 9.0
margin_top = 5.0
margin_right = 49.0
margin_bottom = 121.0

[node name="StatLineRacer2" parent="." instance=ExtResource( 5 )]
margin_left = 597.0
margin_top = 5.0
margin_right = 637.0
margin_bottom = 121.0

[node name="StatLineRacer3" parent="." instance=ExtResource( 5 )]
margin_left = 8.0
margin_top = 245.0
margin_right = 48.0
margin_bottom = 361.0

[node name="StatLineRacer4" parent="." instance=ExtResource( 5 )]
margin_left = 598.0
margin_top = 245.0
margin_right = 638.0
margin_bottom = 361.0

[node name="GameStats" type="HBoxContainer" parent="."]
margin_left = 189.0
margin_top = -1.0
margin_right = 390.0
margin_bottom = 25.0
grow_horizontal = 0
theme = ExtResource( 2 )
alignment = 2
script = ExtResource( 7 )

[node name="LevelName" type="Label" parent="GameStats"]
margin_left = 60.0
margin_top = 6.0
margin_right = 119.0
margin_bottom = 19.0
text = "Prva runda"
__meta__ = {
"_edit_group_": true
}

[node name="GameTimer" parent="GameStats" instance=ExtResource( 8 )]
unique_name_in_owner = true
margin_left = 123.0
margin_right = 201.0

[node name="Popups" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartCountdown" parent="Popups" instance=ExtResource( 9 )]
unique_name_in_owner = true

[node name="GameEvent" type="Control" parent="Popups"]
visible = false
margin_left = 190.0
margin_top = 122.0
margin_right = 454.0
margin_bottom = 203.0

[node name="Name" type="Label" parent="Popups/GameEvent"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_right = 44.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Player 1"
align = 1

[node name="Event" type="Label" parent="Popups/GameEvent"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.5
margin_top = -64.0
margin_right = 122.5
custom_fonts/font = ExtResource( 1 )
text = "DEAD!!!"
align = 1

[node name="GameOver" type="Control" parent="Popups"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="GameOver" type="Label" parent="Popups/GameOver"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -68.5
margin_right = 210.0
margin_bottom = 26.5
custom_fonts/font = SubResource( 776 )
text = "GAME-OVER"
align = 1

[node name="Label" type="Label" parent="Popups/GameOver"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_left = 114.0
margin_top = 229.0
margin_right = 534.0
margin_bottom = 242.0
align = 1

[node name="Menu" type="HBoxContainer" parent="Popups/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = 65.0
margin_right = 51.0
margin_bottom = 78.0
custom_constants/separation = 16

[node name="QuitBtn" type="Button" parent="Popups/GameOver/Menu"]
margin_right = 21.0
margin_bottom = 13.0
text = "Quit"

[node name="RestartBtn" type="Button" parent="Popups/GameOver/Menu"]
margin_left = 37.0
margin_right = 102.0
margin_bottom = 13.0
text = "RESTART [R]"

[connection signal="pressed" from="Popups/GameOver/Menu/QuitBtn" to="Popups/GameOver" method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Popups/GameOver/Menu/RestartBtn" to="Popups/GameOver" method="_on_RestartBtn_pressed"]
